scripts/nullaway/annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8.txt
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:97: error: [NullAway] assigning @Nullable expression to @NonNull field
    ArgParser.RangePnt low = null;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:101: error: [NullAway] assigning @Nullable expression to @NonNull field
    ArgParser.RangePnt high = null;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:263: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
      if (!e.getMessage().equals(errmsg)) {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:326: error: [NullAway] dereferenced expression strs is @Nullable
    if (strs.length != check.length) {
            ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:394: error: [NullAway] dereferenced expression namelist is @Nullable
      verify(i == namelist.length, "numNames=" + i + ", expecting "
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:421: error: [NullAway] dereferenced expression rngCheck is @Nullable
        rngCheck[i++].check(ra);
                ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:493: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return null;
      ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:778: error: [NullAway] dereferenced expression vec is @Nullable
        verify(vec.size() == resultIdx + 1, "Expecting result vector size "
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:470: error: [NullAway] @NonNull field ArgParser$NameDesc.name not initialized
    private String name;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:518: error: [NullAway] assigning @Nullable expression to @NonNull field
    String sval = null;
           ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:702: error: [NullAway] assigning @Nullable expression to @NonNull field
    private RangePnt low = null;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:862: error: [NullAway] @NonNull field ArgParser$Record.nameList not initialized
    private NameDesc nameList;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:911: error: [NullAway] assigning @Nullable expression to @NonNull field
    private String helpMsg = null;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:945: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Object resHolder = null;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:1005: error: [NullAway] dereferenced expression rangeTail is @Nullable
        rangeTail.next = ra;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:1785: error: [NullAway] dereferenced expression nameTail is @Nullable
        nameTail.next = ndesc;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:1869: error: [NullAway] assigning @Nullable expression to @NonNull field
      rec.resHolder = null;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:1871: error: [NullAway] assigning @Nullable expression to @NonNull field
      rec.resHolder = resHolder;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2116: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return null; // can't happen
    ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2412: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
                if (e.getMessage().contains("malformed boolean")) {
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgHolder.java:182: error: [NullAway] dereferenced expression v.getDefaultValue() is @Nullable
        equal &= v.getDefaultValue().equals(getDefaultValue());
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgHolder.java:209: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return value;
    ^
    (see http://t.uber.com/nullaway )
../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgHolder.java:228: error: [NullAway] dereferenced expression value is @Nullable
    hash += clazz.hashCode() + (isSetValue() ? value.hashCode() : 0);
                                                    ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
23 errors
